@@ -4,5 +4,6 @@ load:
     - ../tools/jquery-1.7.1.js
     - ../tools/sinon-2.4.1.js
     - ../../src/main/java/com/lorepo/icplayer/public/libs/commons.js
+    - ../../src/main/java/com/lorepo/icplayer/public/libs/jquery.keyboard.min.js
     - src/*.js
     - test/*.js
